# prova

./: Cargo.toml  activate.bat  activate.sh  conf.txt
Group23/: README.md  activate.sh  conf.txt  deactivate.bat  deactivate.sh  log.txt
Group23/src/: backup_command.rs  backup_tool.rs  main.rs  notification_window.rs
Group5/: .gitignore  Cargo.toml  configuration.txt  readme.md
Group5/src/: backup.rs  main.rs
Group5/ui/: appwindow.slint
