[package]
name = "progetto_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.32.0"
chrono = "0.4.38"
num_cpus = "1.16.0"
device_query = "2.1.0"
rdev = "0.5.3"
auto-launch = "0.5.0"
notify-rust = "4.5.8"