[package]
name = "Group5"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Group5"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "2.1.0"
ctrlc = "3.4.4"

rodio = "0.19.0"
cpal = "0.15.3"

copy_dir = "0.1.3"

sysinfo = "0.30.13"

chrono = "0.4.38"

cpu-time = "1.0.0"

fs_extra = "1.3.0"

rdev = "0.5.3"
glob = "0.3.1"

auto-launch = "0.5.0"

slint = "1.6"
rfd = "0.14.1"

[build-dependencies]
slint-build = "1.6"